# kotiki

./: .gitignore  Caddyfile  Dockerfile  README.md  docker-compose.yml  example.env  main.py  pyproject.toml
app/: server.py
app/api/routers/: kotiki.py
app/core/: dependencies.py  lifespan.py
app/models/: kotiki.py
app/repositories/: kotiki_repo.py  s3_repo.py
app/services/: kotiki_service.py
sql/: ddl.sql
