[project]
name = "kotiki"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
readme = "README.md"
dependencies = [
    "aioboto3==15.5.0",
    "dotenv==0.9.9",
    "fastapi>=0.136.1",
    "psycopg[binary,pool]==3.3.4",
    "python-multipart>=0.0.9",
    "uvicorn>=0.46.0",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "app"
module-root = ""

[tool.uv]
required-version = "~=0.9.2"
add-bounds = "exact"
